ADD: rethinking 3d reconstruction

--- a/_posts/2023-2-9-biliup.md
+++ b/_posts/2023-2-9-biliup.md
@@ -6,10 +6,13 @@ category: Jekyll
 layout: post
 cover: /assets/pics/biliup/bilibili_1750x632.jpg
 ---
+
 # BiliUp Automatic Recording and Posting Tool
+
 Automatically records broadcasts from platforms and uploads to Bilibili
 
 ## 1. Installation
+
 ```shell
 pip install biliup
 
@@ -18,20 +21,27 @@ pip install quickjs
 sudo apt update && sudo apt install nodejs -y
 
 ```
+
 ## 2. Recording
+
 Create Directory：
+
 ```shell
 mkdir biliup_home
 
 cd biliup_home
 
 ```
+
 vim configuration file：
+
 ```shell
 vim config.toml
 
 ```
+
 Paste the following content：
+
 ```toml
 # these are required fields
 [streamers."1xx直播录像"] # streamer1
@@ -42,34 +52,45 @@ tags = ["biliup"]
 url = ["https://www.twitch.tv/2xx"]
 tags = ["biliup"]
 ```
-+ tags are the tags for the manuscript, which can be arbitrarily written, such as "Host Recording", "Hearthstone", etc., but must not exceed 12.
-+ streamers is the name of the submission
-+ url is the address of the live room
+
+- tags are the tags for the manuscript, which can be arbitrarily written, such as "Host Recording", "Hearthstone", etc., but must not exceed 12.
+- streamers is the name of the submission
+- url is the address of the live room
 
 Start recording
+
 ```shell
 biliup start
 ```
+
 Check if the script is running correctly
+
 ```shell
 ps -A |grep biliup #If the process is found, it is running successfully
 ```
+
 ## 3. Posting to BiliBili
+
 Based on your machine, go tohttps://github.com/ForgQi/biliup-rs/releases to find the matching executable file
 
 For example, my machine: Linux, x86_64
 
 Download the file:
-```shell 
+
+```shell
 wget https://github.com/ForgQi/biliup-rs/releases/download/v0.1.15/biliupR-v0.1.15-x86_64-linux.tar.xz
 ```
+
 Extract：
+
 ```shell
 tar -xvJf *.tar.xz
 ```
+
 Login to get a cookie:
 
 ```shell
 ./biliup login
 ```
+
 After the host finishes broadcasting, it will automatically post; make sure to place the cookie and config.toml in the same directory.
